fixed portfolio vertical alignment flex start

--- a/partials/_layout.scss
+++ b/partials/_layout.scss
@@ -145,7 +145,7 @@ h3 {
     flex: 1 0 30%;
     display: flex;
     flex-flow: column nowrap;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 }
 
